# Dasystem2

./: .gitignore  ALL_FIXES_COMPLETED.md  ANALYTICS_FIXES_COMPLETE.md  ANALYTICS_IMPLEMENTATION_COMPLETE.md  ANALYTICS_REDESIGN_COMPLETE.md  ANALYTICS_SYSTEM_PLAN.md  BACKEND_FIXES_NEEDED.md  DATABASE_VERIFICATION_REPORT_AR.md  DIRECTOR_NOTES_IMPLEMENTATION_SUMMARY.md  DRAG_SWAP_FEATURE_SUMMARY.md  FEATURE_SUMMARY.md  FINAL_IMPLEMENTATION_SUMMARY.md  FINANCE_CARDS_SEARCH_COMPLETE.md  FIXES_APPLIED.md  HISTORY_SYSTEM_COMPLETE.md  HISTORY_TRACKING_IMPLEMENTATION_PLAN.md  IOS_PREMIUM_DESIGN_COMPLETE.md  README.md  SCHEDULE_FIXES_SUMMARY.md  SCHEDULE_MANAGEMENT_IMPLEMENTATION_SUMMARY.md  SEARCH_BAR_FINAL_FIXES.md  SEARCH_BAR_FIXES.md  SEARCH_COMPREHENSIVE_IMPLEMENTATION.md  SEARCH_FINAL_UPDATES.md  SEARCH_FIXES_COMPLETE.md  SEARCH_NAVIGATION_COMPLETE.md  SEARCH_ROLE_FILTERING_COMPLETE.md  TEACHERS_MODULE_DOCUMENTATION.md  UNIVERSAL_SEARCH_COMPLETE.md  UNIVERSAL_SEARCH_IMPLEMENTATION_PLAN.md  UPDATES_SUMMARY.md  can she sit on my face  openapi.json  tables.md  test_attendance_data.py  verify_attendance_db.py
DAS Backend/: MIGRATION_INSTRUCTIONS.md  SCHEDULE_GENERATION_IMPROVEMENTS_COMPLETED.md  add_primary1_data.py  database_migration_add_session_type.sql  fix_unicode.py  migration_add_behavior_records.sql  test_schedule_generation.py
DAS Frontend/: COLOR_SYSTEM_GUIDELINES.md  README.md  index.html  (+9 more)
DAS Frontend/src-tauri/: Cargo.toml  build_output.txt  tauri.conf.json
DAS Frontend/src-tauri/capabilities/: events.json  window.json
DAS Frontend/src-tauri/src/: main.rs
(+319 files in other folders)
