[package]
name = "das-management"
version = "0.0.0"
description = "Professional School Management System - DAS Management"
authors = ["DAS Management Team"]
license = "MIT"
repository = ""
default-run = "das-management"
edition = "2021"
rust-version = "1.70"

[build-dependencies]
tauri-build = { version = "2.4", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }

tauri = { version = "2.8.0", features = [
  "tray-icon",
  "image-png"
] }

tauri-plugin-shell = "2.3.1"
tauri-plugin-fs = "2.4.2"
tauri-plugin-window-state = "2.4.0"
tauri-plugin-decorum = "0.1.6"


[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
